--- a/templates/Criar Conta/criar.html
+++ b/templates/Criar Conta/criar.html
@@ -1,68 +1,46 @@
 <!DOCTYPE html>
+<head>
+  <meta charset="UTF-8" />
+  <title>CADASTRO</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="stylesheet" type="text/css" href="criar.css" />
+</head>
+<body>
+ <div id="cadastro">
+    <form method="post" action=""> 
+      <h1>Cadastro</h1> 
+       
+      <p> 
+        <label for="nome_cad">Seu nome</label>
+        <input id="nome_cad" name="nome_cad" required="required" type="text" placeholder="nome" />
+      </p>
+       
+      <p>
+      <label for="cpf">CPF:</label>
+      <input type="cpf" id="cpf" inputmode="number" minlength="11" maxlength="11"
+          pattern="^[0-9]{3}.?[0-9]{3}.?[0-9]{3}-?[0-9]{2}"
+          required autocomplete="off">
+      </p>
 
-<html lang="pt-br">
-
-    <head>
-
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=chrome">
-        <meta name="viewport"content="width=device-width, initial-scale=1.0">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="stylesheet" href='criar.css' />
-
-        <title>Cadastro</title>
-
-    </head>
-
-    <body>
-
-        <div id="login">
-
-            <form class="card">
-
-                <div class="card-header">
-
-                    <h2>Cadastro</h2>
-
-                </div>
-
-                <div class="card-content">
-
-                    <div class="card-content-area">
-
-                        <label for="usuario">Nome</label>
-
-                        <input type="text" id="Nome" autocomplete="off">
-
-                    </div>
-
-                    <div class="card-content-area">
-
-                        <label for="telefone">Telefone</label>
-
-                        <input type="telefone" id="telefone" autocomplete="off">
-
-                    </div>
-
-                    <div class='card-content-area'>
-                        <label for='cep'>CEP</label>
-
-                        <input type='cep' id='cep' autocomplete='off'>
-
-                </div>
-
-                <div class="card-footer">
-
-                    <a href="file:///C:/Users/lucas/Desenvolvimento/templates/Home/home.html" class="nav-link lead mr-4 font-weight-bold">ENTRAR</a>
-
-                </div>
-
-            </form>
-
-        </div>
-
-    </body>
-
+      <p> 
+        <label for="telefone_cad">Seu Telefone</label>
+        <br>
+        <input type="text" name="telefone" id="telefone" placeholder="(55)11111-1111" maxlength="15" />
+      </p>
+      
+      <p> 
+        <input type="submit" value="Cadastrar"/> 
+      </p>
+       
+      <p class="link">  
+        Já tem conta?
+        <a href="file:///C:/Users/lucas/Desenvolvimento/templates/Login/logar.html"> Ir para Login </a>
+      </p>
+    </form>
+  </div>
+</div>
+</div> 
+<script src='mascara_telefone.js'></script> 
+<script src='verific.js'></script>
+</body>
 </html>
