--- a/templates/Logar/logar.html
+++ b/templates/Logar/logar.html
@@ -1,66 +1,43 @@
 <!DOCTYPE html>
+<head>
+  <meta charset='UTF-8'/>
+  <title>LOGIN</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <link rel='stylesheet' type='text/css' href='logar.css'/>
+</head>
+<body>
+  <div class='container'>
+    <a class='link' id='Login'><a/>
+    </div>
 
-<html lang="pt-br">
+  <div id='Login'>
+    <form method='post' action=''>
+      <h1>Login</h1>
+      <p>
+        <label for='nome_login'>SEU NOME</label>
+        <input id='nome_login' name='nome_login' required='required' type='text' placeholder='ex. nome_usuario'/>
+      </p>
 
-    <head>
+      <p>
+        <label for='cpf_login'>SEU CPF</label>
+        <input type='cpf' id='text' inputmode='text' minlength='11' maxlength='11'
+          pattern='^[0-9]{3}.?[0-9]{3}.?[0-9]{3}-?[0-9]{2}'
+          required autocomplete='off'>
+      </p>
 
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=chrome">
-        <meta name="viewport"content="width=device-width, initial-scale=1.0">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="stylesheet" href='logar.css' />
+      <p>
+        <a href='file:///C:/Users/lucas/Desenvolvimento/templates/Inicio/inicial.html'></a>
+        <input type='submit' value='Login'/>
+      </p>
 
-        <title>Login</title>
-
-    </head>
-
-    <body>
-
-        <div id="login">
-
-            <form class="card">
-
-                <div class="card-header">
-
-                    <h2>LOGIN</h2>
-
-                </div>
-
-                <div class="card-content">
-
-                    <div class="card-content-area">
-
-                        <label for="usuario">USUÁRIO</label>
-
-                        <input type="text" id="usuario" autocomplete="off">
-
-                    </div>
-
-                    <div class="card-content-area">
-
-                        <label for="password">SENHA</label>
-
-                        <input type="password" id="password" autocomplete="off">
-
-                    </div>
-
-                </div>
-
-                <div class="card-footer">
-
-                    <input type="submit" value="ENTRAR" class="submit">
-
-                    <p class="txt-center ls-login-signup">Não é cadastrado ?
-					    <a href="file:///C:/Users/lucas/Desenvolvimento/templates/Criar%20Conta/criar.html">Cadastre-se agora</a>
-                    </p>
-                </div>
-
-            </form>
-
-        </div>
-
-    </body>
-
+      <p class='link'>
+        Não é cadastrado ? 
+        <a href='file:///C:/Users/lucas/Desenvolvimento/templates/Criar%20Conta/criar.html'>Cadastre-se</a>
+      </p>
+    </form>
+  </div>
+  <script src='mascara_telefone.js'></script> 
+  <script src='verific.js'></script>
+</body>
 </html>
+       
