--- a/templates/Logar/logar.css
+++ b/templates/Logar/logar.css
@@ -1,120 +1,89 @@
-body {
-
-    padding: 0;
-
-    margin: 0;
-
-    background-color: #103155;
-
-}
-
-#login {
-    display: flex;
-
-    align-items: center;
-
-    justify-content: center;
-
-    height: 100vh;
-
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
-    font-weight: bold;
-
-
-}
-
-.card {
-
-    background-color: #0872b8;
-
-    padding: 40px;
-
-    border-radius: 15px;
-
-    width:280px;
-
-}
-
-
-.card-content label {
-
-    color: black;
-
-    font-size: 15px;
-
-    opacity: 0.8;
-
-}
-
-.card-content-area {
-
-    display: flex;
-
-    flex-direction: column;
-
-    padding:10px;
-
-
-}
-
-.card-content-area input {
-
-    margin-top: 10px;
-
-    padding:5px;
-
-    background-color: transparent;
-
-    border-bottom: 0.6px solid black;
-
-    border-radius: 5px;
-
-    font-size: 13px;
-
-    outline: none;
-
-    color: black;
-
-}
-
-.card-footer {
-
-    display: flex;
-
-    flex-direction: column;
-
-}
-
-.card-footer .submit{
-    width: 100%;
-
-    height: 40px;
-
-    background-color: deepskyblue;
-
-    border-radius: 15px;
-
-    font-size: 15px;
-
-    color: white;
-
-    margin: 10px 0;
-
-
-
-}
-
-.card-footer a {
-
-    text-align: center;
-
-    font-size: 15px;
-
-    opacity: 0.8;
-
-    color: #fff;
-
+/* CSS reset */
+*, *:before, *:after { 
+    margin:0;
+    padding:0;
+    font-family: Arial,sans-serif;
+  }
+   
+  /* remove a linha dos links */
+  a{
     text-decoration: none;
-
-}
+  }
+   
+  /* esconde as ancoras da tela */
+  a.links{
+    display: none;
+  }
+  .content{
+      width: 500px;
+      min-height: 560px;    
+      margin: 0px auto;
+      position: relative;   
+    }
+  
+    h1{
+      font-size: 48px;
+      color: #066a75;
+      padding: 2px 0 10px 0;
+      font-family: Arial,sans-serif;
+      font-weight: bold;
+      text-align: center;
+      padding-bottom: 30px;
+    }
+  
+    p{
+      margin-bottom:15px;
+    }
+     
+    .content p:first-child{
+      margin: 0px;
+    }
+     
+    label{
+      color: #405c60;
+      position: relative;
+    }
+  
+    input {
+      outline: none;
+    }
+     
+    /*estilo dos input,  menos o checkbox */
+    input:not([type="checkbox"]){
+      width: 95%;
+      margin-top: 4px;
+      padding: 10px;    
+      border: 1px solid #b2b2b2;
+     
+      -webkit-border-radius: 3px;
+      border-radius: 3px;
+     
+      -webkit-box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.6) inset;
+      box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.6) inset;
+     
+      -webkit-transition: all 0.2s linear;
+      transition: all 0.2s linear;
+    }
+  
+    /*estilo do botão submit */
+  input[type="submit"]{
+      width: 100%!important;
+      cursor: pointer;  
+      background: rgb(61, 157, 179);
+      padding: 8px 5px;
+      color: #fff;
+      font-size: 20px;  
+      border: 1px solid #fff;   
+      margin-bottom: 10px;  
+      text-shadow: 0 1px 1px #333;
+     
+      -webkit-border-radius: 5px;
+      border-radius: 5px;
+     
+      transition: all 0.2s linear;
+    }
+    /*estilo do botão submit no hover */
+  input[type="submit"]:hover{
+      background: #4ab3c6;
+    }
+  
