--- a/templates/Pesquisa do Tempo/previsaotempo.html
+++ b/templates/Pesquisa do Tempo/previsaotempo.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PYTEMP</title>
+    <link rel="stylesheet" href="temp.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=chrome">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css" />
-  <title>PREVISÃO DO TEMPO</title>
-</head>
-
-<body>
-  <div class="container-fluid p-0 container-sm d-flex justify-content-center">
-
-    <div class="card text-center shadow-lg" style="width: 26rem;">
-
-      <div class="card-header bg-white text-dark font-weight-bold">
-        PREVISÃO
-      </div>
-
+  <body>
+    <header>
+      <nav>
+        <a class="logo" href="file:///C:/Users/lucas/Desenvolvimento/templates/Inicio/inicial.html">PYTEMP</a>
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li><a href="file:///C:/Users/lucas/Desenvolvimento/templates/Pesquisa%20do%20Tempo/previsaotempo.html">PREVISÃO DO TEMPO</a></li>
+          <li><a href="file:///C:/Users/lucas/Desenvolvimento/templates/Hist%C3%B3rico/pesqui.html">HISTÓRICO</a></li>
+          <li><a href="file:///C:/Users/lucas/Desenvolvimento/templates/Sobre/sobre.html">SOBRE</a></li>
+          <li><a href="#">ENTRAR</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
       <div class="card-body">
         <div class="city">Cidade Exemplo, BR</div>
         <div class="date">Terça, 22 Fevereiro 2022</div>
         <div class="container-img">
-         
 			<img src="./icons/unknown.png">
         </div>
         <div class="container-temp mx-4 my-3">
@@ -48,9 +53,9 @@
 
     </div>
   </div>
-
-  <script src="script.js"></script>
-  <script src="https://kit.fontawesome.com/f0e17cbf2f.js" crossorigin="anonymous"></script>
-</body>
-
+  <script src="script.js"></script> 
+ 
+    </main>
+    <script src="resmponsivo.js"></script>
+  </body>
 </html>
