--- a/templates/Sobre/sobre.html
+++ b/templates/Sobre/sobre.html
@@ -1,11 +1,42 @@
-<div class="container my-3">
-    <h1 class="font-weight-bold">Sobre nós</h1>
-    <p>
-        Olá, prazer meu nome é Lucas. Eu criei esse site de Previsão do tempo
-    </p>
-    <p>
-        Esse site veio de um Desafio aonde sua função principal era realizar a Previsão do Tempo de uma região que o usuário informa-se.
-    <p>
-        Site pode ser usado sem está logado ou possuir alguma conta nele, porém caso você queria ver o seu Histórico de pesquisas ou saber a temperatura da sua localização pesquisada.
-    </p>
-</div>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PYTEMP</title>
+    <link rel="stylesheet" href="sobre.css" />
+  </head>
+
+  <body>
+    <header>
+      <nav>
+        <a class="logo" href="file:///C:/Users/lucas/Desenvolvimento/inicial.html">PYTEMP</a>
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li><a href="file:///C:/Users/lucas/Desenvolvimento/templates/Pesquisa%20do%20Tempo/previsaotempo.html?input-cep=89056400">PREVISÃO DO TEMPO</a></li>
+          <li><a href="file:///C:/Users/lucas/Desenvolvimento/templates/Hist%C3%B3rico/pesqui.html">HISTÓRICO</a></li>
+          <li><a href="#">SOBRE</a></li>
+          <li><a href="#">ENTRAR</a></li>
+        </ul>
+      </nav>
+      <div class="container my-3">
+        <p>
+            Olá, prazer meu nome é Lucas. Eu criei esse site de Previsão do tempo
+        </p>
+        <p>
+            Esse site veio de um Desafio aonde sua função principal era realizar a Previsão do Tempo de uma região que o usuário informa-se.
+        <p>
+            Site pode ser usado sem está logado ou possuir alguma conta nele, porém caso você queria ver o seu Histórico de pesquisas ou saber a temperatura da sua localização pesquisada.
+        </p>
+    </div>
+    
+    </header>
+    <main></main>
+    <script src="sobre.js"></script>
+  </body>
+</html>
