--- a/templates/Histórico/pesqui.html
+++ b/templates/Histórico/pesqui.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
-<html lang='pt-br'>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HISTÓRICO</title>
+    <link rel="stylesheet" href="pesqui.css" />
+  </head>
 
-<head><link rel="stylesheet" href="pesqui.css" />
-</head>
-
-<body>
-    <form>
-        <div>   
-          <label for="diaa">Informe a data do seu aniversário:</label>
-          <input type="date" id="bday" name="diaa" required pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}">
-          <span class="validity"></span>
+  <body>
+    <header>
+      <nav>
+        <a class="logo" href="file:///C:/Users/lucas/Desenvolvimento/templates/Inicio/inicial.html">PYTEMP</a>
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
         </div>
-        <div>
-            <form>
-                Pesquisar: <input type="search" name="q">
-            </form>
-        </div>
-        <div>
-            <input type="hidden" id="inputOculto" name="inputOculto" value="meuvalor">
-        </div<
-        <div>
-          <input type="submit">
-        </div>
-      </form>
-</body>
-
+        <ul class="nav-list">
+          <li><a href="file:///C:/Users/lucas/Desenvolvimento/templates/Pesquisa%20do%20Tempo/previsaotempo.html?input-cep=89056400">PREVISÃO DO TEMPO</a></li>
+          <li><a href="file:///C:/Users/lucas/Desenvolvimento/templates/Hist%C3%B3rico/pesqui.html">HISTÓRICO</a></li>
+          <li><a href="file:///C:/Users/lucas/Desenvolvimento/templates/Sobre/sobre.html">SOBRE</a></li>
+          <li><a href="file:///C:/Users/lucas/Desenvolvimento/templates/Cadastro/cadastro.html">ENTRAR</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <script src="resmponsivo.js"></script>
+  </body>
 </html>
